# charutil

./: CHANGELOG.md  CMakeLists.txt  README.md
dependencies/: CMakeLists.txt
include/terra/charutil/: character_utilities.h
src/: CMakeLists.txt  character_utilities.cpp  is_valid_utf8.cpp  unicode_constants.h  utf16_to_utf8.cpp  utf8_to_utf16.cpp
test/: CMakeLists.txt
test/utf16_to_utf8/: CMakeLists.txt  test_utf16_to_utf8.cpp
test/utf8_to_utf16/: CMakeLists.txt  test_utf8_to_utf16.cpp
test/utf8_validity/: CMakeLists.txt  test_utf8_validity.cpp
